--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "7068a5ec-4060-43bf-b2dd-7ef1c6dd5f95"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
